--- a/src/App.css
+++ b/src/App.css
@@ -257,6 +257,13 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   line-height: 1;
   margin-bottom: 20px;
   display: block;
+  min-height: 130px;
+}
+@media (max-width: 1200px) {
+  .banner h1 {
+    min-height: 260px;
+
+  }
 }
 .banner p {
   color: #B8B8B8;
@@ -335,6 +342,12 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   flex-direction: column;
   justify-content: space-between;
 }
+.skill-slider .item div {
+  flex: 1 1 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .skill-slider .item img {
   width: 50%;
   margin: 0 auto 15px auto;
@@ -359,6 +372,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 	font-size: 45px;
 	font-weight: 700;
   text-align: center;
+  margin-bottom: 30px;
 }
 .project p {
   color: #B8B8B8;
